--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     <p>To wrap up January, we are proud to bring you the release of Firefox 85. In this version we are bringing you support for the :focus-visible pseudo-class in CSS and associated devtools, and the complete removal of Flash support from Firefox.</p>
                 </div>
                 <div class="intro-img">
-                    <img src="./assets/img/mailbox-not-optimized.svg" alt="Mailbox">
+                    <img class="mailbox" src="./assets/img/mailbox-not-optimized.svg" alt="Mailbox">
                 </div>
                 <div class="contact-form">
                     <fieldset class="form-grid">
